@@ -1,12 +1,3 @@
 # flake8: noqa: F401
 from .bright_all import brightness_features
-
-brightness_names = [
-    "bg_med",
-    "bright_avg",
-    "bright_sd",
-    "bright_bc_avg",
-    "bright_bc_sd",
-    "bright_perc_10",
-    "bright_perc_90"
-]
+from .common import brightness_names
